[tool.poetry]
name = "directory"
version = "0.1.0"
description = ""
authors = ["Igor <iiigorrr@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.37"
fastapi = {extras = ["all"], version = "^0.115.6"}
alembic = "^1.14.1"
mysql-connector-python = "^9.2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
